# rag-project-medical

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  embed_and_store.py  ingest.py  pyproject.toml  rag_chain.py  requirements.txt  run.py
.github/workflows/: ci.yml
evals/: dataset.json  run_eval.py
src/rag_medical/: config.py  embed_and_store.py  ingest.py  rag_chain.py
tests/: test_config.py  test_ingest.py  test_rag_chain.py
