[project]
name = "rag-medical"
version = "0.1.0"
description = "A RAG-powered Q&A chatbot for medical literature"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "gradio>=6.19.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.44.0",
    "pymupdf>=1.27.2.3",
    "tiktoken>=0.13.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_medical"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"run.py" = ["E402"]
"app.py" = ["E402"]
"evals/*" = ["E402", "E501"]
"src/rag_medical/rag_chain.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["rag_medical"]
